hphp/hack/test/enum_class/typing/typing.extends4.bad.php.exp
File "typing.extends4.bad.php", line 24, characters 12-12:
Enum F includes enum E but their base types are incompatible (Typing[4388])
